Add memory option information to README.